--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "gsap": "^3.12.5",
     "lil-gui": "^0.20.0",
-    "three": "^0.170.0"
+    "three": "^0.170.0",
+    "three-bvh-csg": "^0.0.16",
+    "three-mesh-bvh": "^0.8.3"
   }
 }
